# CoinView

./: CMakeLists.txt  Coin.qml  ExchangeRates.qml  README.md  main.cpp  main.qml  qml.qrc  systemtrayicon.cpp  systemtrayicon.h
Resources/: Info.plist.in
